# ReclaimX

./: .gitignore  Anchor.toml  LAYERZERO_ENDPOINTS.md  README.md  hardhat.config.js  package.json
app/: page.tsx
contracts/: ReclaimXOFT.sol  RecoveryInitiator.sol
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: NotificationCenter.tsx  RecoveryManagement.tsx  StakingInterface.tsx  VaultCreation.tsx
frontend/src/components/ui/: animated-background.tsx  animated-card.tsx  blockchain-animation.tsx  floating-elements.tsx  layerzero-background.tsx  loading-spinner.tsx  progress.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/constants/: abis.ts  networks.ts
frontend/src/hooks/: use-contracts.ts  use-notifications.ts  use-wallet.ts
frontend/src/services/: solana-service.ts  vault-service.ts
frontend/src/utils/: validation.ts
programs/reclaimx/: Cargo.toml
programs/reclaimx/src/: lib.rs
scripts/: deploy-evm.ts  deploy-solana.ts
tests/: reclaimx.test.js
